# Pokemon-Clone

./: .gitignore  .main.cpp.swp  Animation.cpp  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  Pokemon-Thunder-and-Lightning  README.md  cmake_install.cmake  game.cpp  game.h  hero.cpp  hero.h  imgui.ini  install_manifest.txt  log  main.cpp  playing.cpp  playing.h  pokemon.h  splashScreen.cpp  splashScreen.h  tags  util.cpp  util.h
Testing/Temporary/: CTestCostData.txt
art/: SplashScreen.xcf
assets/: TileSet.tsx  Title Screen.xcf  sprites.xml  testmap.tmx  testmap2.tmx  testmap3.tmx  titlescreen-back.xcf
assets/Hero/: HERO.png.txt  sprites.xml
godot/: Label.tscn  Lucario-Title Screen.pbm  Lucario-Title Screen.tex  Pokemon Logo.pbm  Pokemon Logo.tex  TitleScreen.tscn  engine.cfg
include/: AnimatedSprite.hpp  Animation.hpp  SFMLOrthogonalLayer.hpp  battle.h  definitions.h  enums.h  fader.h  file.h  font_manager.cpp  font_manager.h  game.h  generalManager.h  glad.h  gui-components.h  hero.h  imconfig-SFML.h  imconfig.h  map.h  mapManager.h  menu.h  move.h  playing.h  pokemon.h  polarVector.hpp  rm  roundedRectangle.h  splashScreen.h  spriteContainer.hpp  spritemanager.h  statictilemap.h  texturemanager.h  tileLoader.hpp  util.h
include/tmx/: DebugShape.hpp  Log.hpp  MapLayer.hpp  MapLoader.hpp  MapObject.hpp  QuadTreeNode.hpp  tmx2box2d.hpp
include/tmxlite/: FreeFuncs.hpp  ImageLayer.hpp  Map.hpp  Object.hpp  ObjectGroup.hpp  Property.hpp  TileLayer.hpp  Tileset.hpp
requirements/: overview.md
src/: .playing.cpp.swo  AnimatedSprite.cpp  Animation.cpp  battle.cpp  fader.cpp  font_manager.cpp  game.cpp  game.h  generalManager.cpp  glad.c  gui-components.cpp  hero.cpp  main.cpp  mapManager.cpp  menu.cpp  move.cpp  playing.cpp  pokemon.cpp  roundedRectangle.cpp  splashScreen.cpp  splashScreen.h  spritemanager.cpp  statictilemap.cpp  texturemanager.cpp  util.cpp  util.h
src/STP/Core/: Layer.cpp  TileSet.cpp
src/tmx/: DebugShape.cpp  Log.cpp  MapLayer.cpp  MapLoaderPrivate.cpp  MapObject.cpp  QuadTreeNode.cpp  tmx2box2d.cpp
src/tmxlite/: FreeFuncs.cpp  ImageLayer.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp
